--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,13 +36,17 @@
         android:layout_marginTop="20dp"/>
     
     <FrameLayout
+        android:layout_marginTop="80dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp">
 
       <android.support.v7.widget.RecyclerView
           android:id="@+id/recycler_scan_results"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
+          android:visibility="invisible"
           />
 
         <ProgressBar
