--- a/app/src/main/res/layout/activity_connected.xml
+++ b/app/src/main/res/layout/activity_connected.xml
@@ -76,6 +76,13 @@
                 android:layout_gravity="center"
                 android:onClick="onClickStop"/>
 
+            <android.support.design.button.MaterialButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Sync sensor"
+                android:layout_gravity="center"
+                android:onClick="onClickSyncSensor"/>
+
         </LinearLayout>
 
 
