--- a/app/src/main/res/layout/activity_connected.xml
+++ b/app/src/main/res/layout/activity_connected.xml
@@ -68,6 +68,14 @@
                 android:layout_gravity="center"
                 android:onClick="onClickStop"/>
 
+            <android.support.design.button.MaterialButton
+                android:id="@+id/connection_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Make Connection to Bridge"
+                android:layout_gravity="center"
+                android:onClick="makeConnectionToBridge"/>
+
 
 
         </LinearLayout>
