--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,21 +26,37 @@
         android:fontFamily="monospace"
          />
 
+    <ImageView
+        android:id="@+id/image_animation_view"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:layout_margin="20dp"
+        />
+
     <TextView
-        android:id="@+id/scanning_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/scanning"
-        android:layout_gravity="center"
+        android:text="@string/getting_started"
         android:textAlignment="center"
-        android:layout_marginTop="20dp"/>
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"/>
     
     <FrameLayout
         android:layout_marginTop="80dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp">
+        android:layout_marginEnd="20dp"
+        android:scaleType="centerCrop">
+
+      <android.support.design.button.MaterialButton
+          android:id="@+id/material_button_connect"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:text="SEARCH"
+          android:onClick="onClickStartScan"
+          android:layout_gravity="center_horizontal"
+          android:backgroundTint="@color/colorPrimaryDark"/>
 
       <android.support.v7.widget.RecyclerView
           android:id="@+id/recycler_scan_results"
